--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,7 +4,10 @@ html,body{
   height:100%;
   background-color: #222;
 }
-.content{
+//.test-rotate{
+//  transform:rotate(30deg);
+//}
+#app{
   width:100%;
   height:100%;
 }
@@ -19,23 +22,116 @@ html,body{
 
 //todo image--start
 .img-sec{
-  position:relative;
-  width:100%;
-  height:100%;
-  overflow:hidden;
+  position: relative;
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
   background-color: #ddd;
+
+  perspective: 1800px;
+
+  @at-root {
+    .img-figure {
+      position: absolute;
+
+      width: 320px;
+      height: 360px;
+      margin: 0;
+      padding: 40px;
+
+      background-color: #fff;
+
+      box-sizing: border-box;
+      cursor: pointer;
+      transform-origin: 0 50% 0;
+      transform-style: preserve-3d;
+      transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+
+      &.is-inverse {
+        transform: translate(320px) rotateY(180deg);
+      }
+    }
+
+    figcaption {
+      text-align: center;
+
+      .img-title {
+        margin: 20px 0 0 0;
+
+        color: #a7a0a2;
+        font-size: 16px;
+      }
+
+      .img-back {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+        padding: 50px 40px;
+        overflow: auto;
+
+        color: #a7a0a2;
+        font-size: 22px;
+        line-height: 1.25;
+        text-align: left;
+
+        background-color: #fff;
+
+        box-sizing: border-box;
+        transform: rotateY(180deg) translateZ(1px);
+        backface-visibility: hidden;
+
+        p {
+          margin: 0;
+        }
+      }
+    }
+  }
+
 }
 //todo image--end
 
 //todo stage--end
 
 //todo controller--start
-.controller-nav{
-  position:absolute;
-  left:0;
-  bottom:30px;
-  z-index:101;
-  width:100%;
-  text-align:center;
+.controller-nav {
+  left: 0;
+  bottom: 20px;
+  z-index: 101;
+  width: 100%;
+  text-align: center;
+  @at-root {
+    .controller-unit {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      margin: 0 10px;
+      text-align: center;
+      cursor: pointer;
+      background-color: #aaa;
+      border-radius: 50%;
+      transform: scale(.6);
+      vertical-align: middle;
+      transition: transform .6s ease-in-out;
+      &.is-center {
+        background: #888888;
+        transform: scale(1);
+        &::after {
+          color: #fff;
+          font-family: 'iconfont';
+          line-height: 30px;
+          content: '\e600';
+        }
+        &.is-inverse {
+          background: #555;
+          transform: rotateY(180deg);
+        }
+      }
+    }
+  }
 }
 //todo controller--end
